--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,17 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Weather App</title>
+    <title>Test</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
       <fieldset>
         <form action="/" method="post">
-          <input name="city" type="text" placeholder="Enter a City" required>
-          <input type="submit" value="Get Weather">
+          <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+          <input type="submit" class="ghost-button" value="Get Weather">
         </form>
       </fieldset>
     </div>
