--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
         <h1>Check the Weather</h1>
       <fieldset>
         <form action="/" method="post">
-          <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+          <input name="city" type="text" placeholder="Enter a City" required>
           <br/>
-          <input type="submit" class="ghost-button" value="Get Weather">
+          <input type="submit" class="button" value="Get Weather">
         </form>
         <% if(weather !== null) {
             %><p class="highlight-text"><%= weather %></p>
